# Slicer-SurfaceWrapSolidify

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
SegmentEditorWrapSolidify/: CMakeLists.txt  SegmentEditorWrapSolidify.py
SegmentEditorWrapSolidify/SegmentEditorWrapSolidifyLib/: SegmentEditorEffect.py  SegmentEditorEffect.ui
